Bug 1671668 - Invert the colors in the search mode indicator in dark mode. r=adw,ntim
Differential Revision: https://phabricator.services.mozilla.com/D95066

UltraBlame original commit: 5dc0cfd11b2215c75bdd10a395855586ca9b5199

--- a/browser/themes/shared/urlbar-searchbar.inc.css
+++ b/browser/themes/shared/urlbar-searchbar.inc.css
@@ -1926,6 +1926,69 @@ inline
 5px
 ;
 }
+:
+root
+[
+lwt
+-
+toolbar
+-
+field
+-
+brighttext
+]
+#
+urlbar
+-
+search
+-
+mode
+-
+indicator
+{
+background
+-
+color
+:
+#
+0060df
+;
+outline
+-
+color
+:
+#
+d6ebff
+;
+}
+:
+root
+[
+lwt
+-
+toolbar
+-
+field
+-
+brighttext
+]
+#
+urlbar
+-
+search
+-
+mode
+-
+indicator
+-
+title
+{
+color
+:
+#
+d6ebff
+;
+}
 #
 urlbar
 -
